<resources>
    <string name="app_name">My FREKS!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_create_task">Create Task</string>
    <string name="days_to_finish">There are</string>
    <string name="time_to_finish">days and</string>
    <string name="last">hours left to finish the submission time</string>
    <string name="menu_task">My Tasks</string>
    <string name="menu_about_app">About App</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email or username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Title">Title</string>
    <string name="description">Items can be anything: a task, a customer, a document, or any object.</string>
    <string name="date">Set a date for the new item.</string>
    <string name="add_task">Add  new  Task</string>
    <string name="school_frequency">School Test</string>
    <string name="exame">School Exam</string>
    <string name="week">Week Plan</string>
    <string name="Select">Select one option</string>
    <string name="save">Save Task</string>
    <string name="unidade">Curricular Unit</string>
    <string name="teacher">Teacher</string>
    <string name="contact">Leave here the contacts of colleagues in the group (optional)</string>
    <string name="date_new">Set Day</string>
    <string name="time">Set Time</string>
    <string name="start">start at</string>
    <string name="time_left">Time left</string>
    <string name="todo">Complete</string>
    <string name="todo_submit">submit</string>
</resources>