<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/Title"
            android:textAlignment="textStart" />

        <TextView
            android:id="@+id/startAt_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/start"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/teacherUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/teacher"
            android:textAlignment="textStart" />

        <TextView
            android:id="@+id/Unite_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/unidade"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/complete"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:layout_weight="1"
            android:minHeight="48dp"
            app:srcCompat="@drawable/ic_baseline_done_24" />

        <ImageButton
            android:id="@+id/submit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp"
            app:srcCompat="@drawable/ic_baseline_send_24"
            tools:ignore="SpeakableTextPresentCheck"
            android:contentDescription="@string/todo_submit" />
    </LinearLayout>

    <TextView
        android:id="@+id/timeLeft_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_left"
        android:textAlignment="textStart" />

</LinearLayout>